--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
+    <header class="header">
+        <div class="header__container">
+            <h1>
+                <img class="header__logo" src="./dist/images/disneyplus.svg" alt="">
+            </h1>
+            <ul class="header__links">
+                <li class="header__links__item">
+                    <a class="button button--secondary" href="#">Assine agora</a>
+                </li>
+                <li class="header__links__item">
+                    <a class="button button--dark" href="#">Entrar</a>
+                </li>
+            </ul>
+        </div>
+    </header>
     <section class="hero">
         <div class="hero__content">
             <h1 class="hero__content__branding">
@@ -150,6 +165,158 @@
             *O preço pode variar caso a assinatura seja feita através de outra plataforma
         </p>
     </section>
-    <script src="./src/scripts/main.js"></script>
+    <section class="image-text-section">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="">
+        <div class="image-text-section__text-container">
+            <h2 class="title">Assista do seu jeito</h2>
+            <p class="text--big">
+                Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de títulos em 4K não para de crescer. Além disso, para a felicidade de todos, é possível assistir em até 4 telas ao mesmo tempo.
+            </p>
+        </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+        <picture>
+            <source media="(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png" />
+            <img src="./dist/images/fundo_rei_leao.png" alt="">
+        </picture>
+        <div class="image-text-section__text-container image-text-section--image-full-width__text-container">
+            <h2 class="title">Baixe filme e séries</h2>
+            <p class="text--big">
+                Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+            </p>
+        </div>
+    </section>
+    <section class="available-devices">
+        <h2 class="title">
+            Disponível nos seus dispositivos favoritos
+        </h2>
+        <ul class="available-devices__list">
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/computador.png" alt="">
+                <h4 class="title--small">Computador</h4>
+                <ul>
+                    <li class="text">Chrome OS</li>
+                    <li class="text">MacOS</li>
+                    <li class="text">PC Windows</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/tv.png" alt="">
+                <h4 class="title--small">TV</h4>
+                <ul>
+                    <li class="text">Amazon Fire TV</li>
+                    <li class="text">Android tv</li>
+                    <li class="text">Apple TV</li>
+                    <li class="text">Chromecast</li>
+                    <li class="text">TVs LG</li>
+                    <li class="text">Roku</li>
+                    <li class="text">Samsung</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/videogames.png" alt="">
+                <h4 class="title--small">Videogames</h4>
+                <ul>
+                    <li class="text">PS4</li>
+                    <li class="text">PS5</li>
+                    <li class="text">Xbox One</li>
+                    <li class="text">Xbox Series X</li>
+                    <li class="text">Xbox Series S</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/celular.png" alt="">
+                <h4 class="title--small">Celulares e tablets</h4>
+                <ul>
+                    <li class="text">Tablets Amazon Fire</li>
+                    <li class="text">Celulares e Tablets Android</li>
+                    <li class="text">iPhone e iPad</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+    <section class="faq">
+        <h2 class="title">
+            Perguntas frequentes
+        </h2>
+        <ul class="faq__questions">
+            <li class="faq__questions__item" data-faq-questions>
+                <div class="faq__questions__item__question">
+                    O que está incluído no Disney+?
+                </div>
+                <div class="text--big faq__questions__item__answer">
+                    resposta
+                </div>
+            </li>
+            <li class="faq__questions__item" data-faq-questions>
+                <div class="faq__questions__item__question">
+                    Já tem o Disney+ ou o Star+ e quer o Combo+?
+                </div>
+                <div class="text--big faq__questions__item__answer">
+                    resposta
+                </div>
+            </li>
+            <li class="faq__questions__item" data-faq-questions>
+                <div class="faq__questions__item__question">
+                    Quais formas de pagamento posso utilizar?
+                </div>
+                <div class="text--big faq__questions__item__answer">
+                    resposta
+                </div>
+            </li>
+            <li class="faq__questions__item" data-faq-questions>
+                <div class="faq__questions__item__question">
+                    Como posso ver conteúdos com classificação indicativa até 16 e 18?
+                </div>
+                <div class="text--big faq__questions__item__answer">
+                    resposta
+                </div>
+            </li>
+        </ul>
+    </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="">
+            <ul class="footer__links">
+                <li class="footer__links__item">
+                    <div class="language-selector">
+                        <img src="./dist/images/icones/globe.svg" alt="">
+                        <select>
+                            <option>English</option>
+                            <option selected>Português</option>
+                        </select>
+                    </div>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Termos e Condições de Uso</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Política de privacidade</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Proteção de Dados no Brasil</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Anúncios personalizados</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Dispositivos compatíveis</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Ajuda</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Sobre o Disney+</a>
+                </li>
+            </ul>
+            <p class="text--small">
+                ® 2023 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+            </p>
+            <p class="text--small">
+                Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+            </p>
+        </div>
+    </footer>
+    <script src="./dist/scripts/main.js"></script>
 </body>
 </html>
